--- a/graph_banking/web/templates/account/show.html.eex
+++ b/graph_banking/web/templates/account/show.html.eex
@@ -3,6 +3,11 @@
 <ul>
 
   <li>
+    <strong>Uuid:</strong>
+    <%= @account.id %>
+  </li>
+
+  <li>
     <strong>Currentbalance:</strong>
     <%= @account.currentBalance %>
   </li>
