--- a/web/templates/account/new.html.eex
+++ b/web/templates/account/new.html.eex
@@ -1,6 +1,8 @@
-<h2>New account</h2>
+<div class="row">
+  <div class="col-sm-4"><h4>New Account</h4></div>
+  <div class="col-sm-6"></div>
+  <div class="col-sm-2"><%= link "Back", to: account_path(@conn, :index), class: "btn btn-danger" %></div>
+</div>
 
 <%= render "form.html", changeset: @changeset,
                         action: account_path(@conn, :create) %>
-
-<%= link "Back", to: account_path(@conn, :index) %>
